[package]
name = "axact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
core_temp = []

[dependencies]
axum = { version = "0.6.16", features = ["macros", "ws"] }
serde = { version = "1.0.160", features = ["derive"] }

serde_json = "1.0.93"
sysinfo = "0.28.2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
